# rust-x206LCD

./: .gitignore  Cargo.toml  README.md  config.ini
.github/workflows/: rust.yml
src/: collector.rs  config.rs  dashboard.rs  lib.rs  main.rs
src/client/: ax206lcd.rs  mod.rs
src/collectors/: collector.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  nvidia.rs  system.rs
src/config/: mod.rs
src/dashboard/: mod.rs
src/models/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  nvidia.rs  sensor.rs  system.rs
src/renderer/: colours.rs  drawing.rs  fonts.rs  layout.rs  mod.rs  widgets.rs
src/utils/: file.rs  hwmon.rs  mod.rs
